--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@emailjs/browser": "^4.4.1",
     "antd": "^5.20.2",
     "react": "^18.3.1",
